# pimp-my-claude

./: .gitignore  CLAUDE-template.md  README.md  init-project.sh  settings-template.json  setup.sh
agent-tools/: pyproject.toml
agent-tools/src/claude_tools/: __init__.py  codebase_scanner.py  daily_report.py  models.py  pr_reviewer.py
agent-tools/tests/: test_models.py
agents/: architect.md  code-reviewer.md  harness-tester.md  implementer.md  researcher.md  spec-verifier.md  spec-writer.md  test-writer.md
hooks/: auto-format.sh  block-dangerous.sh  notify-done.sh  pre-compact-save.sh  prompt-hint.sh  protect-sensitive.sh  session-save.sh  subagent-stop-log.sh  vault-briefing.sh
mcp/: db.py  indexer.py  requirements.txt  searcher.py  server.py
rules-templates/: cpp.md  rust.md  vault-notes.md
skills/daily/: SKILL.md
skills/debug-team/: SKILL.md
skills/debugit/: SKILL.md
skills/feature-team/: SKILL.md
skills/guide/: SKILL.md
skills/harness/: SKILL.md
skills/note/: SKILL.md
skills/perf/: SKILL.md
skills/prompt/: SKILL.md
skills/recall/: SKILL.md
skills/research-team/: SKILL.md
skills/review/: SKILL.md
skills/review-team/: SKILL.md
skills/save-session/: SKILL.md
skills/sdd/: SKILL.md
skills/taskloop/: SKILL.md
skills/tdd/: SKILL.md
skills/vault-add-project/: SKILL.md
skills/vault-daily/: SKILL.md
skills/vault-note/: SKILL.md
skills/vault-promote/: SKILL.md
skills/vault-recall/: SKILL.md
skills/vault-save/: SKILL.md
skills/vault-search/: SKILL.md
vault-template/: .gitignore  CLAUDE.md
(+6 files in other folders)
